[package]
name = "rrscrapelib"
version = "0.1.0"
authors = ["Hunter Brodie <hunterbrodie@gmail.com>"]
edition = "2018"

[lib]
name = "rrscrapelib"
crate-type = ["staticlib", "cdylib"]

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
select = "0.5.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"